Auto build path for extraction

--- a/resources/ui/wiibafudialog.ui
+++ b/resources/ui/wiibafudialog.ui
@@ -69,7 +69,7 @@
          <locale language="English" country="UnitedStates"/>
         </property>
         <property name="text">
-         <string>File:</string>
+         <string>File path:</string>
         </property>
        </widget>
       </item>
