--- a/resources/ui/wiibafu.ui
+++ b/resources/ui/wiibafu.ui
@@ -378,22 +378,6 @@
            <enum>QFrame::Raised</enum>
           </property>
           <layout class="QGridLayout" name="gridLayout_5">
-           <item row="0" column="3">
-            <spacer name="verticalSpacer_2">
-             <property name="orientation">
-              <enum>Qt::Vertical</enum>
-             </property>
-             <property name="sizeType">
-              <enum>QSizePolicy::Preferred</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>20</width>
-               <height>50</height>
-              </size>
-             </property>
-            </spacer>
-           </item>
            <item row="1" column="1">
             <spacer name="horizontalSpacer">
              <property name="orientation">
@@ -409,31 +393,6 @@
               </size>
              </property>
             </spacer>
-           </item>
-           <item row="1" column="2" colspan="3">
-            <widget class="QLabel" name="infoTab_label_GameCover">
-             <property name="minimumSize">
-              <size>
-               <width>180</width>
-               <height>250</height>
-              </size>
-             </property>
-             <property name="maximumSize">
-              <size>
-               <width>180</width>
-               <height>250</height>
-              </size>
-             </property>
-             <property name="frameShape">
-              <enum>QFrame::NoFrame</enum>
-             </property>
-             <property name="frameShadow">
-              <enum>QFrame::Plain</enum>
-             </property>
-             <property name="alignment">
-              <set>Qt::AlignCenter</set>
-             </property>
-            </widget>
            </item>
            <item row="1" column="5">
             <spacer name="horizontalSpacer_2">
@@ -514,101 +473,6 @@
               </size>
              </property>
             </spacer>
-           </item>
-           <item row="3" column="3">
-            <widget class="QComboBox" name="infoTab_comboBox_GameLanguages">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <item>
-              <property name="text">
-               <string>English</string>
-              </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>American</string>
-              </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>France</string>
-              </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>German</string>
-              </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>Spain</string>
-              </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>Italy</string>
-              </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>Netherland</string>
-              </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>Portuguese</string>
-              </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>Northern Sami</string>
-              </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>Denmark</string>
-              </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>Norway</string>
-              </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>Finland</string>
-              </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>Russia</string>
-              </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>Japan</string>
-              </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>Korea</string>
-              </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>Taiwan</string>
-              </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>China</string>
-              </property>
-             </item>
-            </widget>
            </item>
            <item row="0" column="0" rowspan="5">
             <layout class="QGridLayout" name="gridLayout_3">
@@ -1066,10 +930,146 @@
              </item>
             </layout>
            </item>
+           <item row="1" column="2" colspan="3">
+            <widget class="QLabel" name="infoTab_label_GameCover">
+             <property name="minimumSize">
+              <size>
+               <width>180</width>
+               <height>250</height>
+              </size>
+             </property>
+             <property name="maximumSize">
+              <size>
+               <width>180</width>
+               <height>250</height>
+              </size>
+             </property>
+             <property name="frameShape">
+              <enum>QFrame::NoFrame</enum>
+             </property>
+             <property name="frameShadow">
+              <enum>QFrame::Plain</enum>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignCenter</set>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="3">
+            <widget class="QComboBox" name="infoTab_comboBox_GameLanguages">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <item>
+              <property name="text">
+               <string>English</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>American</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>France</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>German</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>Spain</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>Italy</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>Netherland</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>Portuguese</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>Northern Sami</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>Denmark</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>Norway</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>Finland</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>Russia</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>Japan</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>Korea</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>Taiwan</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>China</string>
+              </property>
+             </item>
+            </widget>
+           </item>
+           <item row="0" column="3">
+            <spacer name="verticalSpacer_2">
+             <property name="orientation">
+              <enum>Qt::Vertical</enum>
+             </property>
+             <property name="sizeType">
+              <enum>QSizePolicy::Preferred</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>20</width>
+               <height>50</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
           </layout>
           <zorder>infoTab_label_GameCover</zorder>
           <zorder>infoTab_comboBox_GameLanguages</zorder>
-          <zorder></zorder>
+          <zorder>verticalSpacer_2</zorder>
          </widget>
         </item>
         <item row="1" column="0">
@@ -1094,10 +1094,10 @@
            <item>
             <widget class="QPushButton" name="infoTab_pushButton_LoadFullHQCover">
              <property name="text">
-              <string>Load full H&amp;Q cover</string>
+              <string>Load f&amp;ull HQ cover</string>
              </property>
              <property name="shortcut">
-              <string>Ctrl+H</string>
+              <string>Ctrl+U</string>
              </property>
             </widget>
            </item>
@@ -1107,7 +1107,7 @@
               <string>View game in &amp;browser</string>
              </property>
              <property name="shortcut">
-              <string>Ctrl+V</string>
+              <string>Ctrl+B</string>
              </property>
             </widget>
            </item>
